# routes/users.js
@@ -7,23 +7,24 @@ const { validateUserFields, validateLoginHeaders } = require('../validator');
 
 router.use(validateLoginHeaders);
 
-router.get('/', getAccess(true, true), usersController.getUsers);
+router.get('/', getAccess(true, false), usersController.getUsers);
 
 router.get('/firstlogin', (req, res, next) => {
   res.render('form', { githubId: req.session.user.id });
 });
-router.post('/admin/:id', usersController.setUserAsAdmin);
+router.put('/admin/:id', usersController.setUserAsAdmin);
+
+router.get('/document/:document', usersController.getUserByDocument);
 
 router.get('/:id', usersController.getUser);
 
-router.post('/', (req, res) => {
+router.post('/', getAccess(true, true), (req, res) => {
   const user = req.body;
   const validationErrors = validateUserFields(user);
 
   if (validationErrors.length > 0) {
-    return res.status(422).json({ errors: validationErrors });
+    return res.status(422).json({ error: 'Validation Error', errors: validationErrors });
   }
-
   usersController.createUser(req, res);
 });
 
